<resources>
    <string name="app_name">Avanti Student Companion</string>
    <string name="logo_desc">Avanti Student Companion</string>

    <string name="missions">Missions</string>
    <string name="learn">Learn</string>
    <string name="progress">Progress</string>
    <string name="more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_sign_up">Register</string>
    <string name="login_message">Please login</string>
    <string name="errorNoShiftMode">Unable to get shift mode field</string>
    <string name="errorCannotChangeShiftMode">Unable to change value of shift mode</string>
    <string name="action_register">Signup</string>
    <string name="cannot_login">Don\'t have an account?</string>
    <string name="prompt_name">Full Name</string>

</resources>
