<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="in.avanti.app.register.RegisterActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/avanti_logo"
        android:src="@drawable/avanti_logo_a"
        android:layout_width="wrap_content"
        android:contentDescription="@string/logo_desc"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/fullname"
        android:layout_height="37dp"
        android:hint="@string/prompt_name"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/silver"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="312dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="312dp"
        android:layout_height="37dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/silver"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <EditText
        android:id="@+id/password"
        android:layout_width="312dp"
        android:layout_height="37dp"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/register"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/black"
        android:textColorHint="@color/silver"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />


    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="312dp"
        android:layout_height="37dp"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/register"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/black"
        android:textColorHint="@color/silver"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Button
        android:id="@+id/register_button"
        android:text="@string/action_sign_up"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/avantiYellow"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

</android.support.constraint.ConstraintLayout>
